--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/base-64": "^1.0.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
+    "@types/qrcode": "^1.5.0",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "base-64": "^1.0.0",
+    "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
