make webunpacked things downloadable

--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/base-64": "^1.0.0",
     "@types/jest": "^27.5.2",
+    "@types/jszip": "^3.4.1",
     "@types/node": "^17.0.45",
     "@types/qrcode": "^1.5.0",
     "@types/react-dom": "^18.0.6",
     "@types/react-latex": "^2.0.0",
     "@types/react-router-dom": "^5.3.3",
     "base-64": "^1.0.0",
+    "jszip": "^3.10.1",
+    "node-zip": "^1.1.1",
     "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
